css/style.css
.footer {
  font-size: smaller;

  background-color: #efefef;
  padding: 20px 0;
  margin-top: 20px;
}

.footer .copyright {
  text-align: center;
}

.google-maps {
	position: relative;
	padding-bottom: 75%; // This is the aspect ratio
	height: 0;
	overflow: hidden;
}
.google-maps iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100% !important;
	height: 100% !important;
}

.author-image {
  width: 64px;
  height: 64px;
}

section.seperated {
  border-bottom: 1px solid #ecf0f1;

  padding-bottom: 1.5em;
  margin-bottom: 1.5em;
}

.member-image {
  width: 48px;
  height: 48px;
  float: left;
  margin: 0 5px 5px 0;
}

.row-flex {
  display: flex;
  flex-flow: row wrap;
}

.col-flex-item {
  display: flex;
  flex-flow: column;
}

.block-image {
  height: 200px;
  width: 200px;
  display: block;
  background-color: #f0f0f0;
  background-position-x: 50%;
  background-position-y: 50%;
  background-origin: border-box;
  background-size: cover;
  margin-right: 20px;
  border: thin solid #e3e3e3;
}

.panel-project h3 {
  margin-top: 0;
}

.panel-project {
  border-radius: 0;
}

.project-search-params {
  padding-bottom: 20px;
}

